--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-gesture-handler": "^2.8.0",
-    "react-native-reanimated": "^2.12.0"
+    "react-native-reanimated": "^2.12.0",
+    "react-native-redash": "^18.1.0",
+    "react-native-svg": "13.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
